Fixed spacing issue

--- a/styles/modules.css
+++ b/styles/modules.css
@@ -7,15 +7,17 @@
 .details {
   background: rgba(0,0,0,0);
   color: gray;
+  line-height: 1.2em;
+  font-size: 0.8em;
 }
 .title {
   padding-bottom: 0px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 
 }
 .image-container {
   background: white;
-  margin-top: 50px;
+  margin-top: 25px;
   border-style: solid;
   border-color: black;
   border-width: 1px;
@@ -24,9 +26,11 @@
 }
 .author {
   float: left;
+  font-size: 0.75em;
 }
 .isbn {
   float: right;
+  font-size: 0.67em;
 }
 input {
   width: 100%;
